# 37_2

VPlayer/: CMakeLists.txt  Main.qml  main.cpp
